--- a/src/css/_savedTimers.styl
+++ b/src/css/_savedTimers.styl
@@ -63,10 +63,10 @@
 	border 1px solid $blue
 
 .saved-timers__info-value,
-.saved-timers__info-button
+.saved-timers__hide-info-button
 	flex 0 1 40%
 
-.saved-timers__info-button
+.saved-timers__hide-info-button
 	// border 1px solid $blue
 	padding 1px
 	background-color transparent
@@ -79,3 +79,14 @@
 .saved-timers__info-totalTime
 	font-weight bold
 	color $green
+	
+.saved-timers__sorting-div
+	display flex
+	align-items center
+	justify-content space-around
+	margin 10px 0
+
+.saved-timers__sort-button
+	{$button}
+	flex 0 1 22.5%
+	font-size 0.65rem
