--- a/src/css/style.css
+++ b/src/css/style.css
@@ -34,9 +34,9 @@
 }
 .create-timer-label {
   -webkit-box-flex: 0;
-      -ms-flex: 0 1 35%;
-          flex: 0 1 35%;
-  font-size: 1rem;
+      -ms-flex: 0 1 30%;
+          flex: 0 1 30%;
+  font-size: 0.9rem;
   font-family: 'Open Sans';
   display: -webkit-box;
   display: -ms-flexbox;
@@ -44,16 +44,28 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  text-align: right;
+}
+.question-mark {
+  color: #7a8897;
+  text-decoration: underline;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 100%;
+          flex: 0 1 100%;
 }
 .create-timer-input {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 55%;
-          flex: 1 1 55%;
-  height: 30px !important;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 55%;
+          flex: 0 1 55%;
+  height: 8vmax !important;
   border-radius: 2px !important;
   border: 2px solid #dbcdc9 !important;
   background-color: transparent !important;
   color: #ab8b82 !important;
+  margin: 0 !important;
   margin: 0 !important;
 }
 .create-timer-input:focus,
@@ -61,6 +73,15 @@
   color: #dbcdc9 !important;
   outline: none !important;
   box-shadow: 0px 0px 1px 1px #dbcdc9 !important;
+  margin: 0 !important;
+}
+.create-timer-input::-moz-selection {
+  background-color: #fff;
+  color: #282828;
+}
+.create-timer-input::selection {
+  background-color: #fff;
+  color: #282828;
 }
 .create-timer-form-section {
   -webkit-box-flex: 0;
@@ -72,30 +93,31 @@
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 .create-timer-button {
   -webkit-box-flex: 0;
-      -ms-flex: 0 1 45%;
-          flex: 0 1 45%;
-  -ms-flex-item-align: end;
-      align-self: flex-end;
+      -ms-flex: 0 1 47.5%;
+          flex: 0 1 47.5%;
   color: #dbcdc9;
-  font-size: 0.75rem;
-  border: 1px solid #dbcdc9;
+  border: 2px solid #dbcdc9;
   padding: 5px;
   background-color: transparent;
-  align-self: flex-end;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  font-size: 0.8rem;
 }
 .create-timer-button:active,
 .create-timer-button:focus {
   outline: none !important;
-  box-shadow: 0px 0px 1px 1px #474646;
+  box-shadow: 0px 0px 1px 1px #dbcdc9;
 }
 .create-timer-button__add {
   margin-bottom: 15px;
 }
 .create-timer__total-time {
-  margin: 30px 0;
+  margin: 20px 0;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -125,9 +147,9 @@
   color: #ab8b82;
 }
 .footer {
-  -ms-flex-item-align: end;
-      align-self: flex-end;
-  width: 100%;
+  position: fixed;
+  bottom: 0;
+  height: 6.5vh;
   font-size: 1rem;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -138,11 +160,12 @@
       -ms-flex-pack: justify;
           justify-content: space-between;
   z-index: 1;
+  width: 100%;
 }
 .footer-item {
   -webkit-box-flex: 1;
-      -ms-flex: 1 1 25%;
-          flex: 1 1 25%;
+      -ms-flex: 1 1;
+          flex: 1 1;
   text-align: center;
   color: #a5a5a5;
   background-color: #090f12;
@@ -155,30 +178,44 @@
   text-decoration: none;
   background-color: #474646;
 }
+@media all and (orientation: landscape) {
+  .footer {
+    height: 10vh;
+  }
+}
 .header {
+  position: fixed;
+  top: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-flex: 0;
-      -ms-flex: 0 1 100%;
-          flex: 0 1 100%;
+  width: 100%;
   -ms-flex-pack: distribute;
       justify-content: space-around;
   -ms-flex-item-align: start;
       align-self: flex-start;
   background-color: #090f12;
   z-index: 1;
+  height: 7.5vh;
 }
 .header-link {
   -webkit-box-flex: 1;
-      -ms-flex: 1 1 14.285714285714286%;
-          flex: 1 1 14.285714285714286%;
+      -ms-flex: 1 1 10%;
+          flex: 1 1 10%;
   font-size: 1rem;
-  text-align: center;
   color: #a5a5a5;
   font-family: Lato;
   padding: 10px;
   transition: 0.5s all ease;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 .header-logout-button {
   color: #dbcdc9;
@@ -187,6 +224,11 @@
 }
 .header-back-button {
   color: #dbcdc9;
+}
+@media all and (orientation: landscape) {
+  .header {
+    height: 10vh;
+  }
 }
 .app-login {
   -ms-flex-item-align: center;
@@ -203,9 +245,6 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
 }
 .login-facebook,
 .login-google {
@@ -285,12 +324,12 @@ img {
   -webkit-box-flex: 0;
       -ms-flex: 0 1 100%;
           flex: 0 1 100%;
-  background-color: #161616;
+  background-color: #282828;
 }
 .profile-info-form {
   -webkit-box-flex: 0;
-      -ms-flex: 0 1 80%;
-          flex: 0 1 80%;
+      -ms-flex: 0 1 97.5%;
+          flex: 0 1 97.5%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -302,6 +341,22 @@ img {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+}
+.profile-edit__section {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 100%;
+          flex: 0 1 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 5px 0;
 }
 .profile-button {
   -webkit-box-flex: 0;
@@ -323,27 +378,38 @@ img {
 }
 .profile-label {
   -webkit-box-flex: 0;
-      -ms-flex: 0 1 20%;
-          flex: 0 1 20%;
+      -ms-flex: 0 1 25%;
+          flex: 0 1 25%;
   font-size: 0.9rem;
   text-align: right;
   color: #a5a5a5;
 }
 .profile-input {
   -webkit-box-flex: 0;
-      -ms-flex: 0 1 70%;
-          flex: 0 1 70%;
-  height: 30px !important;
+      -ms-flex: 0 1 65%;
+          flex: 0 1 65%;
+  height: 8vmax !important;
   border-radius: 2px !important;
   border: 2px solid #dbcdc9 !important;
   background-color: transparent !important;
   color: #ab8b82 !important;
+  margin: 0 !important;
+  height: 6vmax !important;
 }
 .profile-input:focus,
 .profile-input:active {
   color: #dbcdc9 !important;
   outline: none !important;
   box-shadow: 0px 0px 1px 1px #dbcdc9 !important;
+  margin: 0 !important;
+}
+.profile-input::-moz-selection {
+  background-color: #fff;
+  color: #282828;
+}
+.profile-input::selection {
+  background-color: #fff;
+  color: #282828;
 }
 .profile-edit-button {
   -webkit-box-flex: 0;
@@ -365,9 +431,9 @@ img {
 }
 .profile-input-toggle {
   -webkit-box-flex: 0;
-      -ms-flex: 0 1 70%;
-          flex: 0 1 70%;
-  border-radius: 2px !important;
+      -ms-flex: 0 1 68.5%;
+          flex: 0 1 68.5%;
+  height: 6vmax !important;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -379,6 +445,7 @@ img {
   -webkit-box-flex: 0;
       -ms-flex: 0 1 50px;
           flex: 0 1 50px;
+  padding: 6px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -489,12 +556,12 @@ $
   border: 1px solid #7a8897;
 }
 .saved-timers__info-value,
-.saved-timers__info-button {
+.saved-timers__hide-info-button {
   -webkit-box-flex: 0;
       -ms-flex: 0 1 40%;
           flex: 0 1 40%;
 }
-.saved-timers__info-button {
+.saved-timers__hide-info-button {
   padding: 1px;
   background-color: transparent;
   position: absolute;
@@ -507,7 +574,36 @@ $
   font-weight: bold;
   color: #22633e;
 }
+.saved-timers__sorting-div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  margin: 10px 0;
+}
+.saved-timers__sort-button {
+  color: #dbcdc9;
+  border: 2px solid #dbcdc9;
+  padding: 5px;
+  background-color: transparent;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 22.5%;
+          flex: 0 1 22.5%;
+  font-size: 0.65rem;
+}
+.saved-timers__sort-button:active,
+.saved-timers__sort-button:focus {
+  outline: none !important;
+  box-shadow: 0px 0px 1px 1px #dbcdc9;
+}
 .app-settings {
+  margin-top: 2vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -545,27 +641,37 @@ $
   color: #a5a5a5;
 }
 .settings-label {
-  font-size: 0.9rem;
+  font-size: 1rem;
   -webkit-box-flex: 0;
       -ms-flex: 0 1 40%;
           flex: 0 1 40%;
   text-align: right;
 }
 .settings-input {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 1 50%;
-          flex: 0 1 50%;
-  height: 30px !important;
+  height: 8vmax !important;
   border-radius: 2px !important;
   border: 2px solid #dbcdc9 !important;
   background-color: transparent !important;
   color: #ab8b82 !important;
+  margin: 0 !important;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 50%;
+          flex: 0 1 50%;
 }
 .settings-input:focus,
 .settings-input:active {
   color: #dbcdc9 !important;
   outline: none !important;
   box-shadow: 0px 0px 1px 1px #dbcdc9 !important;
+  margin: 0 !important;
+}
+.settings-input::-moz-selection {
+  background-color: #fff;
+  color: #282828;
+}
+.settings-input::selection {
+  background-color: #fff;
+  color: #282828;
 }
 .settings-description {
   font-size: 1.25rem;
@@ -579,15 +685,23 @@ $
   color: #ab8b82;
 }
 @import url("https://fonts.googleapis.com/css?family=Lato|Open+Sans");
+@media all and (max-width: 568px) {
+  html {
+    font-size: 12px;
+  }
+}
+@media all and (max-width: 667px) {
+  html {
+    font-size: 14px;
+  }
+}
+@media all and (max-width: 736px) {
+  html {
+    font-size: 16px;
+  }
+}
 body {
   background-color: #161616;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  height: 100vh;
 }
 * {
   margin: 0;
@@ -598,37 +712,47 @@ h1 {
   font-size: 2rem !important;
   font-family: Lato;
   color: #dbcdc9;
+  margin: 0;
 }
 h2 {
   font-size: 1.75rem !important;
   font-family: Lato;
   color: #dbcdc9;
+  margin: 0;
 }
 h3 {
   font-size: 1.5rem !important;
   font-family: Lato;
+  margin: 0;
 }
-#root > div {
+.page-content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
   width: 100%;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  height: 100%;
+  position: fixed;
+  top: 7.5vh;
+  bottom: 6.5vh;
+  overflow-y: auto;
 }
-[class$="title"] {
-  font-family: "Open Sans";
+@media all and (orientation: landscape) {
+  .page-content {
+    top: 10vh;
+    bottom: 10vh;
+  }
 }
-[class^="app-"] {
-  height: 80vh;
-}
-p,
-label {
-  font-family: 'Open Sans';
+.react-root {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 100vh;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 .new-timer {
   display: -webkit-box;
