--- a/src/css/_createTimer.styl
+++ b/src/css/_createTimer.styl
@@ -14,15 +14,22 @@
 	margin 0
 
 .create-timer-label
-	flex 0 1 35%
-	font-size 1rem
+	flex 0 1 30%
+	font-size 0.9rem
 	font-family $content
 	display flex
 	align-items center
-	// justify-content flex-end
+	justify-content flex-end
+	text-align right
+	
+.question-mark
+	color $blue
+	text-decoration underline
+	flex 0 1 100%
+
 	
 .create-timer-input
-	flex 1 1 55%
+	flex 0 1 55%
 	{$input}
 	margin 0 !important
 
@@ -30,25 +37,28 @@
 	flex 0 1 100%
 	margin 5px
 	{$flex-row-wrap}
+	justify-content space-around
 
 .create-timer-button
-	flex 0 1 45%
-	align-self flex-end
-	color $white
-	font-size 0.75rem
-	border 1px solid $white
-	padding 5px
-	background-color transparent
-	align-self flex-end
-	&:active,
-	&:focus
-		outline none !important
-		box-shadow 0px 0px 1px 1px $black3
+	flex 0 1 47.5%
+	{$button}
+	font-size 0.8rem
+	// align-self flex-end
+	// color $white
+	// font-size 0.75rem
+	// border 1px solid $white
+	// padding 5px
+	// background-color transparent
+	// align-self flex-end
+	// &:active,
+	// &:focus
+	// 	outline none !important
+	// 	box-shadow 0px 0px 1px 1px $black3
 	&__add
 		margin-bottom 15px
 
 .create-timer__total-time
-	margin 30px 0
+	margin 20px 0
 	align-items center
 	justify-content space-around
 	& > h2
