--- a/src/css/_login.styl
+++ b/src/css/_login.styl
@@ -2,7 +2,7 @@
 	align-self center
 	{$flex-col-wrap}
 	align-items center
-	justify-content space-between
+	// justify-content space-between
 
 .login-facebook,
 .login-google
