--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -3,52 +3,63 @@
 
 @import url('https://fonts.googleapis.com/css?family=Lato|Open+Sans');
 
+@media all and (max-width 568px)
+	html
+		font-size 12px
+		
+@media all and (max-width 667px)
+	html
+		font-size 14px
+		
+@media all and (max-width 736px)
+	html
+		font-size 16px
+
 body {
 	background-color $black1
-	display flex
-	align-items center
-	height 100vh
 }
 
 * {
 	margin 0
 	padding 0
 	font-family $content
-	// line-height 1.25rem
 }
 
 h1
 	font-size 2rem !important
 	font-family $title
 	color $white
+	margin 0
 	
 h2
 	font-size 1.75rem !important
 	font-family $title
 	color $white
+	margin 0
 	
 h3
 	font-size 1.5rem !important
 	font-family $title
-
-#root
-	// height 100vh
-	& > div
-		{$flex-row-wrap}
-		width 100%
-		justify-content center
-		// align-items space-between
-		height 100%
-
-[class$="title"]
-	font-family "Open Sans"
+	margin 0
 	
-[class^="app-"]
-	height 80vh
+.page-content
+	display flex
+	width 100%
+	justify-content center
+	position fixed
+	top 7.5vh
+	bottom 6.5vh
+	overflow-y auto
+	@media all and (orientation landscape)
+		top 10vh
+		bottom 10vh
 
-p,
-label
-	font-family $content
+
+.react-root
+	display flex
+	width 100%
+	height 100vh
+	justify-content center
 
 .new-timer
 	{$flex-row-wrap}
