More styling; changed completedTimers to arrays; check your gotdamn variables...

--- a/src/css/_createTimer.styl
+++ b/src/css/_createTimer.styl
@@ -1,13 +1,18 @@
 .app-create-timer
-	& > h1
-		align-self flex-start
-		color $black4
 	flex 0 1 97.5%
-	{$flex-row-wrap}
+	{$flex-col}
+	margin-top 10px
 	align-items flex-start
 	justify-content center
+
+.create-timer-heading
+	align-self center
+	text-align center
+	flex 0 1 8%
+
 .create-timer-form
 	color $white
+	flex 0 1 90%
 	{$flex-row-wrap}
 	justify-content space-around
 	align-self flex-start
