--- a/src/css/_profile.styl
+++ b/src/css/_profile.styl
@@ -8,6 +8,7 @@
 	{$flex-row-wrap}
 	justify-content center
 	align-items space-around
+	margin 10px 0
 	
 .profile-photo
 	flex 0 1 80%
@@ -66,7 +67,7 @@
 	{$input}
 	height 6vmax !important
 
-.profile-edit-button
+.profile-save-button
 	flex 0 1 75%
 	align-self flex-end
 	color $white
