--- a/src/css/_variables.styl
+++ b/src/css/_variables.styl
@@ -10,7 +10,7 @@ $flex-col-wrap =
 	flex-direction column
 	flex-wrap wrap
 	
-$flex-col-no-wrap =
+$flex-col =
 	display flex
 	flex-direction column
 	
@@ -27,7 +27,7 @@ $black3 = #474646
 $black4 = #a5a5a5
 
 $input =
-	height 8vmax !important
+	height 6vmax !important
 	border-radius 2px !important
 	border 2px solid $white !important
 	background-color transparent !important
@@ -47,7 +47,7 @@ $button =
 	// align-self flex-end
 	color $white
 	border 2px solid $white
-	padding 5px
+	padding 2px
 	background-color transparent
 	align-self flex-end
 	&:active,
