--- a/src/css/_settings.styl
+++ b/src/css/_settings.styl
@@ -1,6 +1,6 @@
 .app-settings
-	margin-top 2vh
-	{$flex-col-wrap}
+	margin-top 4vh
+	{$flex-col}
 	width 97.5%
 	align-items center
 	justify-content center
@@ -15,7 +15,7 @@
 	color $black4
 
 .settings-label
-	font-size 1rem
+	font-size 1.25rem
 	flex 0 1 40%
 	text-align right
 
@@ -24,8 +24,7 @@
 	flex 0 1 50%
 
 .settings-description
-	font-size 1.25rem
-	width 70%
+	font-size 1.5rem
 	margin-bottom 25px
 	color $white
 	text-align center
