--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -3,17 +3,17 @@
 
 @import url('https://fonts.googleapis.com/css?family=Lato|Open+Sans');
 
-@media all and (max-width 568px)
-	html
-		font-size 12px
-		
-@media all and (max-width 667px)
-	html
-		font-size 14px
-		
 @media all and (max-width 736px)
 	html
 		font-size 16px
+
+@media all and (max-width 667px)
+	html
+		font-size 14px
+
+@media all and (max-width 568px)
+	html
+		font-size 12px
 
 body {
 	background-color $black1
@@ -43,23 +43,26 @@ h3
 	margin 0
 	
 .page-content
+	position fixed
 	display flex
+	// flex 0 1 100%
 	width 100%
 	justify-content center
-	position fixed
-	top 7.5vh
-	bottom 6.5vh
+	top 5vh
+	bottom 5vh
 	overflow-y auto
 	@media all and (orientation landscape)
-		top 10vh
-		bottom 10vh
-
+		top 7.5vh
+		bottom 6.5vh
+	
+ul
+	list-style none
+	// margin 0
+	// padding 0
 
 .react-root
 	display flex
-	width 100%
 	height 100vh
-	justify-content center
 
 .new-timer
 	{$flex-row-wrap}
@@ -87,7 +90,6 @@ h3
 	color green
 	&:hover
 		text-decoration underline
-	
 		
 .save-timer
 	flex 0 1 80%
@@ -95,6 +97,10 @@ h3
 
 .line-across
 	border 3px solid black
+
+// a
+// 	text-decoration none
+// 	border-bottom 2px dotted $blue
 
 // input:focus
 // 	outline none !important
