--- a/src/css/_footer.styl
+++ b/src/css/_footer.styl
@@ -3,7 +3,7 @@
 	position fixed
 	bottom 0
 	// height 6.5vh
-	font-size 1rem
+	font-size 1.5rem
 	{$flex-row-wrap}
 	justify-content space-between
 	z-index 1
@@ -12,7 +12,7 @@
 .footer-item
 	flex 1 1
 	text-align center
-	color $black4
+	color $white
 	background-color $black0
 	display flex
 	align-items center
@@ -26,3 +26,7 @@
 	height 5vh
 	@media all and (orientation landscape)
 		height 6.5vh
+
+.svg
+	background url(./icons/home.svg)
+	background-size 100px 80px
