--- a/src/css/_savedTimers.styl
+++ b/src/css/_savedTimers.styl
@@ -4,10 +4,17 @@
 	flex 0 1 97.5%
 	color $white
 	overflow-y hidden
+
+.saved-timers__header
+	{$flex-col}
+	align-items center
 	& > h2
 		flex 0 1 75%
 		text-align center
-		align-self flex-start
+
+.saved-timers__search
+	{$input}
+	height 4vmax !important
 
 .saved-timers__ul
 	flex 0 1 100%
@@ -15,16 +22,15 @@
 	margin 0
 	padding 0
 	overflow-y auto
-	height 85%
-	${flex-row-wrap}
-	align-items space-between
+	max-height 75%
+	{$flex-row-wrap}
+	align-items flex-start
 	justify-content center
 	
 .saved-timers__li
 	position relative
-	flex 0 1 100%
+	flex 1 1 90%
 	border 2px solid $black3
-	height 65px
 	padding 10px
 	margin 5px
 	{$flex-row-wrap}
