--- a/src/css/style.css
+++ b/src/css/style.css
@@ -271,7 +271,7 @@
 .footer {
   position: fixed;
   bottom: 0;
-  font-size: 1rem;
+  font-size: 1.5rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -288,7 +288,7 @@
       -ms-flex: 1 1;
           flex: 1 1;
   text-align: center;
-  color: #a5a5a5;
+  color: #dbcdc9;
   background-color: #090f12;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -312,6 +312,10 @@
   .footer-item {
     height: 6.5vh;
   }
+}
+.svg {
+  background: url("./icons/home.svg");
+  background-size: 100px 80px;
 }
 .header {
   position: fixed;
@@ -376,6 +380,9 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 .login-facebook,
 .login-google {
@@ -599,13 +606,47 @@ img {
   color: #dbcdc9;
   overflow-y: hidden;
 }
-.app-saved-timers > h2 {
+.saved-timers__header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.saved-timers__header > h2 {
   -webkit-box-flex: 0;
       -ms-flex: 0 1 75%;
           flex: 0 1 75%;
   text-align: center;
-  -ms-flex-item-align: start;
-      align-self: flex-start;
+}
+.saved-timers__search {
+  height: 6vmax !important;
+  border-radius: 2px !important;
+  border: 2px solid #dbcdc9 !important;
+  background-color: transparent !important;
+  color: #ab8b82 !important;
+  margin: 0 !important;
+  height: 4vmax !important;
+}
+.saved-timers__search:focus,
+.saved-timers__search:active {
+  color: #dbcdc9 !important;
+  outline: none !important;
+  box-shadow: 0px 0px 1px 1px #dbcdc9 !important;
+  margin: 0 !important;
+}
+.saved-timers__search::-moz-selection {
+  background-color: #fff;
+  color: #282828;
+}
+.saved-timers__search::selection {
+  background-color: #fff;
+  color: #282828;
 }
 .saved-timers__ul {
   -webkit-box-flex: 0;
@@ -615,20 +656,25 @@ img {
   margin: 0;
   padding: 0;
   overflow-y: auto;
-  height: 85%;
-$
-  align-items: space-between;
+  max-height: 75%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
 }
 .saved-timers__li {
   position: relative;
-  -webkit-box-flex: 0;
-      -ms-flex: 0 1 100%;
-          flex: 0 1 100%;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 90%;
+          flex: 1 1 90%;
   border: 2px solid #474646;
-  height: 65px;
   padding: 10px;
   margin: 5px;
   display: -webkit-box;
@@ -882,6 +928,9 @@ ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   height: 100vh;
 }
 .new-timer {
